--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@
 ############################
 
 # Name of website
-title: My Website
+title: Fangcong Yin
 
 # Your name to show in the footer
-author: Some Person
+author: Fangcong Yin
 
 ###############################################
 # --- List of links in the navigation bar --- #
@@ -49,13 +49,8 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "someone@example.com"
-  rss: true  # remove this line if you don't want to show an RSS link at the bottom
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
-  patreon: DeanAttali
-  youtube: c/daattali
+  email: "fy95@cornell.edu"
+  github: fangcong-yin-2
 #  medium: yourname
 #  reddit: yourname
 #  linkedin: daattali
@@ -117,7 +112,7 @@ edit_page_button: true
 navbar-var-length: false
 
 # The keywords to associate with your website, for SEO purposes
-#keywords: "my,list,of,keywords"
+#keywords: "Fangcong Yin, Cornell"
 
 ######################################
 # --- Colours / background image --- #
