--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author: Fangcong Yin
 ###############################################
 
 navbar-links:
-  About Me: "profile.png"
+  CV: "CV.pdf"
 
 ################
 # --- Logo --- #
