--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,9 @@ author: Fangcong Yin
 ###############################################
 
 navbar-links:
+  Publications: "publications"
   CV: "CV.pdf"
-  Interst: "interest"
+  Interest: "interest"
   
 
 ################
@@ -47,7 +48,7 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "fy95@cornell.edu"
+  email: "fangcongyin@utexas.edu"
   github: fangcong-yin-2
 #  medium: yourname
 #  reddit: yourname
